--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "webhook",
+  "name": "node-webhook-scripts",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.16.4"
+  },
+  "license": "SEE LICENCE IN LICENCE.md",
+  "author": {
+    "name": "Alexandre Pénombre",
+    "email": "alexandre.penombre@gmail.com"
   }
 }
